# AIResearchTrendAnalysis

./: .gitignore  README.md  build.py  pack_portable.py  run_backend.py
.claude/: settings.local.json
backend/: pyproject.toml  run_server.py  test_e2e.py
backend/app/: config.py  main.py
backend/app/agents/: analyst.py  executor.py  orchestrator.py  planner.py  publisher.py  snowball.py
backend/app/agents/prompts/: planner_system.j2  publisher_system.j2
backend/app/agents/tools/: __init__.py  search_tools.py
backend/app/analysis/: __init__.py  bibliometrics.py  charts.py  network.py  topic_modeling.py  trend_detection.py
backend/app/api/: websocket.py
backend/app/api/routes/: analysis.py  chat.py  export.py  health.py  papers.py  reports.py  search.py  sessions.py  settings.py
backend/app/api/schemas/: common.py
backend/app/core/: events.py  exceptions.py  rate_limiter.py  task_manager.py
backend/app/db/: engine.py  models.py
backend/app/services/: ai_service.py  corpus_scope.py  export_service.py  paper_service.py
backend/app/sources/: arxiv_source.py  base.py  openalex_source.py  registry.py  scopus_source.py  scraper_source.py
backend/tests/: test_trend_detection.py
frontend/: build_tauri.bat  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/composables/: useApi.ts  useBackend.ts  useChartSetup.ts  useWebSocket.ts
(+21 files in other folders)
