[project]
name = "arta-backend"
version = "0.1.0"
description = "ARTA - AI Research Trend Analysis Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "litellm>=1.50",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "pybliometrics>=3.6",
    "arxiv>=2.1",
    "pyzotero>=1.5",
    "jinja2>=3.1",
    "cryptography>=43",
    "tenacity>=9",
    "websockets>=12",
]

[project.optional-dependencies]
analysis = [
    "bertopic>=0.16",
    "sentence-transformers>=3",
    "scikit-learn>=1.5",
    "pandas>=2.2",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
